# TaikoSFML

./: CMakeLists.txt  Formula  README.md
Assets/Shaders/: shader.frag
src/: main.cpp
src/EngineFramework/Actor/Private/: BaseActor.cpp
src/EngineFramework/Actor/Public/: BaseActor.h
src/EngineFramework/Components/AnimatedTexturedSprite/Private/: AnimatedTexturedSprite.cpp
src/EngineFramework/Components/AnimatedTexturedSprite/Public/: AnimatedTexturedSprite.h
src/EngineFramework/Components/AudioPlayer/Private/: AudioComponent.cpp
src/EngineFramework/Components/AudioPlayer/Public/: AudioComponent.h
src/EngineFramework/Components/BPMSignalComponent/Private/: BPMSignalComponent.cpp
src/EngineFramework/Components/BPMSignalComponent/Public/: BPMSignalComponent.h
src/EngineFramework/Components/FadeComponent/Private/: FadeComponent.cpp
src/EngineFramework/Components/FadeComponent/Public/: FadeComponent.h
src/EngineFramework/Components/Private/: BaseComponent.cpp
src/EngineFramework/Components/Public/: BaseComponent.h
src/EngineFramework/Components/TexturedSprite/Private/: TexuredSprite.cpp
src/EngineFramework/Components/TexturedSprite/Public/: TexturedSprite.h
src/EngineFramework/Lib/Math/Private/: MathLib.cpp  SFMLSpriteUtility.cpp  SFMLTransformUtility.cpp
src/EngineFramework/Lib/Math/Public/: MathLib.h  SFMLSpriteUtility.h  SFMLTransformUtility.h
src/EngineFramework/Private/: BaseEngineSubsystem.cpp  EventHandler.cpp  Scene.cpp  SceneManager.cpp  WindowManager.cpp
src/EngineFramework/Public/: BaseEngineSubsystem.h  EventHandler.h  Scene.h  SceneManager.h  WindowManager.h
src/EngineFramework/SubSystem/DebugManager/Private/: DebugManager.cpp
src/EngineFramework/SubSystem/DebugManager/Public/: DebugManager.h
src/EngineFramework/SubSystem/EventHandler/Private/: EventHandler.cpp
src/EngineFramework/SubSystem/EventHandler/Public/: EventHandler.h
src/EngineFramework/SubSystem/Public/: BaseSubsystem.h
src/EngineFramework/SubSystem/SceneManager/Private/: SceneManager.cpp
src/EngineFramework/SubSystem/SceneManager/Public/: SceneManager.h
src/EngineFramework/SubSystem/WindowManager/Private/: WindowManager.cpp
src/EngineFramework/SubSystem/WindowManager/Public/: WindowManager.h
src/EngineFramework/Utility/Animation/SineWave/Private/: SineWaveGenerator.cpp
src/EngineFramework/Utility/Animation/SineWave/Public/: SineWaveGenerator.h
src/EngineFramework/Utility/ImGUIDebug/Private/: BaseImGUIWindow.cpp
src/EngineFramework/Utility/ImGUIDebug/Public/: BaseImGUIWindow.h
src/EngineFramework/Utility/ImGUIDebug/SpritePosDebug/Private/: SpritePosDebug.cpp
src/EngineFramework/Utility/ImGUIDebug/SpritePosDebug/Public/: SpritePosDebug.h
src/EngineFramework/Utility/Interface/Private/: BaseInteface.cpp
src/EngineFramework/Utility/Interface/Public/: BaseInterface.h
src/GameFramework/Input/Private/: InputComponent.cpp
src/GameFramework/Input/Public/: InputComponent.h
src/GameFramework/Private/: Game.cpp
src/GameFramework/Public/: Game.h
src/GameFramework/Scene/Private/: TestScene.cpp  TestScene2.cpp
src/GameFramework/Scene/Public/: TestScene.h  TestScene2.h
src/GameFramework/Utilities/Private/: FadeTransition.cpp
src/GameFramework/Utilities/Public/: FadeTransition.h
src/TJAParser/Private/: TJACourse.cpp  TJAMap.cpp  TJAParser.cpp  TJAUtility.cpp
src/TJAParser/Public/: TJACourse.h  TJAMap.h  TJAParser.h  TJAUtility.h
src/TaikoFramework/Actor/Notes/Private/: Note.cpp
src/TaikoFramework/Actor/Notes/Public/: Note.h
src/TaikoFramework/Actor/PuchiChara/Private/: PuchiCharacter.cpp
src/TaikoFramework/Actor/PuchiChara/Public/: PuchiCharacter.h
src/TaikoFramework/Actor/TaikoCharacter/Private/: TaikoCharacter.cpp
src/TaikoFramework/Actor/TaikoCharacter/Public/: TaikoCharacter.h
src/TaikoFramework/Components/DrumPart/Private/: DrumPart.cpp
src/TaikoFramework/Components/DrumPart/Public/: DrumPart.h
src/TaikoFramework/Scene/GameScene/Private/: GameScene.cpp
src/TaikoFramework/Scene/GameScene/Public/: GameScene.h
src/TaikoFramework/Scene/MainMenu/Private/: MainMenuScene.cpp
src/TaikoFramework/Scene/MainMenu/Public/: MainMenuScene.h
